--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 
     <header id="header">
-      <div class="container">
-        <img src="images/Image-55 (Small).jpeg"
+      <!-- <div class="container"> -->
+
+        <!-- <img src="images/Image-55 (Small).jpeg"
         alt="Turtle"
         width="300"
         height="300"/>
@@ -26,20 +27,26 @@
            <img src="images/Image-56.png"
            alt="Hare"
            width="300"
-           height="300"/>
+           height="300"/> -->
+           <div class="banner">
+             <!-- <p class="title"> Michelle Lonsdale Tattoo and Fine Art  </p> -->
+           <!-- <h2>  Welcome To Michelle Lonsdale's Tattoos and Fine Art Homepage.
+           </h2> -->
+           </div>
         <h1 class="title"> Michelle Lonsdale Tattoo and Fine Art  </h1>
         <a href="#footer"> Bottom </a>
         <!-- <h4> Welcome To Michelles Tattoos and Fine Art Homepage.
         Check out my finished and flash work galleries below!
         regarding any requiries please feel free to send me a message in the outbox below.</h4> -->
-      </div>
+
+      <!-- </div> -->
     </header>
 
-<div class="banner">
-<h2>  Welcome To Michelles Tattoos and Fine Art Homepage.
-Check out my finished and flash work galleries below!
-</h2>
-</div>
+<!-- <div class="banner">
+  <!-- <p class="title"> Michelle Lonsdale Tattoo and Fine Art  </p> -->
+<!-- <h2>  Welcome To Michelle Lonsdale's Tattoos and Fine Art Homepage.
+</h2> -->
+<!-- </div> --> -->
 
   <div class="container">
     <!-- <section>
@@ -51,14 +58,15 @@ Check out my finished and flash work galleries below!
 
     <section>
       <h3> Flashwork </h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/sOY5TfmfO5Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <ul>
-        <li> H </li>
-        <li> Atom text editor </li>
-        <li> Google Chrome </li>
+        <li> Click here to view full gallery </li>
+        <li> 4 picture carosel </li>
+        <li> 4 picture </li>
       </ul>
     </section>
 
-    <section>
+    <!-- <section>
       <div class="column">
         <h2>Column 1</h2>
         <p>Im the left column!</p>
@@ -68,23 +76,23 @@ Check out my finished and flash work galleries below!
         <h2>Column 2</h2>
         <p>Im the right column!</p>
         </div>
-        <section/>
+        <section/> -->
 
     <section>
       <h3><em> Finished </em> Work</h3>
       <ul>
-        <li>Where is my <strong>spaget?</strong> </li>
-        <li>Big chungis</li>
-        <li>Big meaty claws</li>
+        <li>Click here to view full  <strong>Gallery</strong> </li>
+        <li>insert image </li>
+        <li>insert image</li>
       </ul>
     </section>
 
     <section>
       <h3> Message bar </h3>
       <ol>
-        <li> blue </li>
-        <li> white </li>
-        <li> black </li>
+        <li> Name </li>
+        <li> Email </li>
+        <li> subject </li>
       </ol>
 
     <form action="MAILTO:petex.1995@outlook.com" method="post" enctype="text/plain">
@@ -106,9 +114,31 @@ I graduated with my Bachelor of Fine Arts in 2016. Since then I have been drawin
 
   <div class="container">
   <footer id="footer">
-      <p> Check out her <a href="https://www.instagram.com/m_lonsdale/" target="_blank">
-      Instagram</a>
-      </p>
+        <a href="https://www.instagram.com/m_lonsdale/" target="_blank">  </a>
+
+        <div class="container">
+        <img src="images/instagram.png"
+        height="100px"
+        weight= "100px">
+        <img src="images/Twitter.png"
+        height="100px"
+        weight="100px">
+        <img src="images/vimeo.png"
+        height="100px"
+        weight="100px">
+
+        <img src="images/outlook.png"
+        height="100px"
+        weight="100px">
+
+
+        <img src="images/facebook.png"
+        height="100px"
+        weight="100px">
+        </div>
+
+
+
 
       <p><a href="#Top"> Top </a></p>
   </footer>
