cleaned up code readded images

--- a/index.html
+++ b/index.html
@@ -5,56 +5,42 @@
   <title> PetesWebsite </title>
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 <body>
 
-    <header id="header">
-      <!-- <div class="container"> -->
+  <header id="header">
+    <div class="container">
 
-        <!-- <img src="images/Image-55 (Small).jpeg"
-        alt="Turtle"
-        width="300"
-        height="300"/>
-        <img src="images/Fingers (Small).jpeg"
-              alt="Fingers"
-              width="300"
-              height="300"/>
 
-        <img src="images/Image-47.jpeg"
-           alt="Neck flower"
-           width="300"
-           height="300"/>
-           <img src="images/Image-56.png"
-           alt="Hare"
-           width="300"
-           height="300"/> -->
-           <div class="banner">
-             <!-- <p class="title"> Michelle Lonsdale Tattoo and Fine Art  </p> -->
-           <!-- <h2>  Welcome To Michelle Lonsdale's Tattoos and Fine Art Homepage.
-           </h2> -->
-           </div>
-        <h1 class="title"> Michelle Lonsdale Tattoo and Fine Art  </h1>
-        <a href="#footer"> Bottom </a>
-        <!-- <h4> Welcome To Michelles Tattoos and Fine Art Homepage.
-        Check out my finished and flash work galleries below!
-        regarding any requiries please feel free to send me a message in the outbox below.</h4> -->
+      <h1 class="title"> Michelle Lonsdale Tattoo and Fine Art  </h1>
+      <a href="#footer"> Bottom </a>
+  </header>
 
-      <!-- </div> -->
-    </header>
+  <section>
+    <img src="images/image55-small.jpeg"
+      alt="Turtle"
+      width="300"
+      height="300"/>
 
-<!-- <div class="banner">
-  <!-- <p class="title"> Michelle Lonsdale Tattoo and Fine Art  </p> -->
-<!-- <h2>  Welcome To Michelle Lonsdale's Tattoos and Fine Art Homepage.
-</h2> -->
-<!-- </div> --> -->
+    <img src="images/fingers-small.jpeg"
+          alt="Fingers"
+          width="300"
+          height="300"/>
+
+    <img src="images/Image-47.jpeg"
+       alt="Neck flower"
+       width="300"
+       height="300"/>
+
+     <img src="images/Image-56.png"
+       alt="Hare"
+       width="300"
+       height="300"/>
+  </section>
 
   <div class="container">
-    <!-- <section>
-      <img src="images/smokey.jpg"
-      class="float-image"/>
-
-      <p>Im a block of text and will wrap aound the image of the smoke.</p>
-    </section> -->
 
     <section>
       <h3> Flashwork </h3>
@@ -66,25 +52,8 @@
       </ul>
     </section>
 
-    <!-- <section>
-      <div class="column">
-        <h2>Column 1</h2>
-        <p>Im the left column!</p>
-        </div>
-
-      <div class="column">
-        <h2>Column 2</h2>
-        <p>Im the right column!</p>
-        </div>
-        <section/> -->
-
     <section>
       <h3><em> Finished </em> Work</h3>
-      <ul>
-        <li>Click here to view full  <strong>Gallery</strong> </li>
-        <li>insert image </li>
-        <li>insert image</li>
-      </ul>
     </section>
 
     <section>
@@ -95,10 +64,10 @@
         <li> subject </li>
       </ol>
 
-    <form action="MAILTO:petex.1995@outlook.com" method="post" enctype="text/plain">
-     <input type="text"
-     placeholder="big chungis">
-     <button type="submit">submit</button>
+      <form action="MAILTO:petex.1995@outlook.com" method="post" enctype="text/plain">
+       <input type="text"
+       placeholder="big chungis">
+       <button type="submit">submit</button>
      </form>
 
     </section>
@@ -106,42 +75,36 @@
     <section>
       <h4> I'm Michelle Lonsdale, and I practice art of all sorts.
 I graduated with my Bachelor of Fine Arts in 2016. Since then I have been drawing, painting and practicing tattooing. <h4>
-      <!-- <a href="https://pixabay.com/"> -->
-        <!-- pixabay -->
-      <!-- </a> -->
     </section>
   </div>
 
   <div class="container">
-  <footer id="footer">
-        <a href="https://www.instagram.com/m_lonsdale/" target="_blank">  </a>
-
-        <div class="container">
-        <img src="images/instagram.png"
-        height="100px"
-        weight= "100px">
+    <footer id="footer">
+      <div class="container">
+        <a href="https://www.instagram.com/m_lonsdale/" target="_blank">
+          <img src="images/instagram.png"
+            height="100px"
+            weight= "100px"/>
+        </a>
         <img src="images/Twitter.png"
-        height="100px"
-        weight="100px">
+          height="100px"
+          weight="100px">
+
         <img src="images/vimeo.png"
-        height="100px"
-        weight="100px">
+          height="100px"
+          weight="100px">
 
         <img src="images/outlook.png"
-        height="100px"
-        weight="100px">
-
+          height="100px"
+          weight="100px">
 
         <img src="images/facebook.png"
-        height="100px"
-        weight="100px">
-        </div>
-
-
-
-
+          height="100px"
+          weight="100px">
+      </div>
       <p><a href="#Top"> Top </a></p>
-  </footer>
+    </footer>
   </div>
+
 </body>
 </html>
